// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`3Operands When_'-1/a % 4'_Should_ParseSuccessfully 1`] = `
Object {
  "end": Object {
    "column": 15,
    "line": 1,
  },
  "left": Object {
    "end": Object {
      "column": 11,
      "line": 1,
    },
    "left": Object {
      "argument": Object {
        "end": Object {
          "column": 9,
          "line": 1,
        },
        "raw": "1",
        "start": Object {
          "column": 9,
          "line": 1,
        },
        "type": "Literal",
        "value": 1,
      },
      "end": Object {
        "column": 9,
        "line": 1,
      },
      "operator": "-",
      "prefix": true,
      "start": Object {
        "column": 8,
        "line": 1,
      },
      "type": "UnaryExpression",
    },
    "operator": "/",
    "right": Object {
      "datatype": "unknown",
      "end": Object {
        "column": 11,
        "line": 1,
      },
      "name": "a",
      "start": Object {
        "column": 11,
        "line": 1,
      },
      "type": "Identifier",
      "typeList": Array [
        "unknown",
      ],
    },
    "start": Object {
      "column": 8,
      "line": 1,
    },
    "type": "BinaryExpression",
  },
  "operator": "%",
  "right": Object {
    "end": Object {
      "column": 15,
      "line": 1,
    },
    "raw": "4",
    "start": Object {
      "column": 15,
      "line": 1,
    },
    "type": "Literal",
    "value": 4,
  },
  "start": Object {
    "column": 8,
    "line": 1,
  },
  "type": "BinaryExpression",
}
`;

exports[`3Operands When_'1/2 + 4000'_Should_ParseSuccessfully 1`] = `
Object {
  "end": Object {
    "column": 14,
    "line": 1,
  },
  "left": Object {
    "end": Object {
      "column": 10,
      "line": 1,
    },
    "left": Object {
      "end": Object {
        "column": 8,
        "line": 1,
      },
      "raw": "1",
      "start": Object {
        "column": 8,
        "line": 1,
      },
      "type": "Literal",
      "value": 1,
    },
    "operator": "/",
    "right": Object {
      "end": Object {
        "column": 10,
        "line": 1,
      },
      "raw": "2",
      "start": Object {
        "column": 10,
        "line": 1,
      },
      "type": "Literal",
      "value": 2,
    },
    "start": Object {
      "column": 8,
      "line": 1,
    },
    "type": "BinaryExpression",
  },
  "operator": "+",
  "right": Object {
    "end": Object {
      "column": 14,
      "line": 1,
    },
    "raw": "4000",
    "start": Object {
      "column": 14,
      "line": 1,
    },
    "type": "Literal",
    "value": 4000,
  },
  "start": Object {
    "column": 8,
    "line": 1,
  },
  "type": "BinaryExpression",
}
`;

exports[`3Operands When_'abc/def + (-1) * ((-1) * x)'_Should_ParseSuccessfully 1`] = `
Object {
  "end": Object {
    "column": 34,
    "line": 1,
  },
  "left": Object {
    "end": Object {
      "column": 12,
      "line": 1,
    },
    "left": Object {
      "datatype": "unknown",
      "end": Object {
        "column": 8,
        "line": 1,
      },
      "name": "abc",
      "start": Object {
        "column": 8,
        "line": 1,
      },
      "type": "Identifier",
      "typeList": Array [
        "unknown",
      ],
    },
    "operator": "/",
    "right": Object {
      "datatype": "unknown",
      "end": Object {
        "column": 12,
        "line": 1,
      },
      "name": "def",
      "start": Object {
        "column": 12,
        "line": 1,
      },
      "type": "Identifier",
      "typeList": Array [
        "unknown",
      ],
    },
    "start": Object {
      "column": 8,
      "line": 1,
    },
    "type": "BinaryExpression",
  },
  "operator": "+",
  "right": Object {
    "end": Object {
      "column": 34,
      "line": 1,
    },
    "left": Object {
      "argument": Object {
        "end": Object {
          "column": 20,
          "line": 1,
        },
        "raw": "1",
        "start": Object {
          "column": 20,
          "line": 1,
        },
        "type": "Literal",
        "value": 1,
      },
      "end": Object {
        "column": 20,
        "line": 1,
      },
      "operator": "-",
      "prefix": true,
      "start": Object {
        "column": 19,
        "line": 1,
      },
      "type": "UnaryExpression",
    },
    "operator": "*",
    "right": Object {
      "end": Object {
        "column": 33,
        "line": 1,
      },
      "left": Object {
        "argument": Object {
          "end": Object {
            "column": 28,
            "line": 1,
          },
          "raw": "1",
          "start": Object {
            "column": 28,
            "line": 1,
          },
          "type": "Literal",
          "value": 1,
        },
        "end": Object {
          "column": 28,
          "line": 1,
        },
        "operator": "-",
        "prefix": true,
        "start": Object {
          "column": 27,
          "line": 1,
        },
        "type": "UnaryExpression",
      },
      "operator": "*",
      "right": Object {
        "datatype": "unknown",
        "end": Object {
          "column": 33,
          "line": 1,
        },
        "name": "x",
        "start": Object {
          "column": 33,
          "line": 1,
        },
        "type": "Identifier",
        "typeList": Array [
          "unknown",
        ],
      },
      "start": Object {
        "column": 26,
        "line": 1,
      },
      "type": "BinaryExpression",
    },
    "start": Object {
      "column": 18,
      "line": 1,
    },
    "type": "BinaryExpression",
  },
  "start": Object {
    "column": 8,
    "line": 1,
  },
  "type": "BinaryExpression",
}
`;

exports[`3Operands When_'x/5 + 0'_Should_ParseSuccessfully 1`] = `
Object {
  "end": Object {
    "column": 14,
    "line": 1,
  },
  "left": Object {
    "end": Object {
      "column": 10,
      "line": 1,
    },
    "left": Object {
      "datatype": "unknown",
      "end": Object {
        "column": 8,
        "line": 1,
      },
      "name": "x",
      "start": Object {
        "column": 8,
        "line": 1,
      },
      "type": "Identifier",
      "typeList": Array [
        "unknown",
      ],
    },
    "operator": "/",
    "right": Object {
      "end": Object {
        "column": 10,
        "line": 1,
      },
      "raw": "5",
      "start": Object {
        "column": 10,
        "line": 1,
      },
      "type": "Literal",
      "value": 5,
    },
    "start": Object {
      "column": 8,
      "line": 1,
    },
    "type": "BinaryExpression",
  },
  "operator": "+",
  "right": Object {
    "end": Object {
      "column": 14,
      "line": 1,
    },
    "raw": "0",
    "start": Object {
      "column": 14,
      "line": 1,
    },
    "type": "Literal",
    "value": 0,
  },
  "start": Object {
    "column": 8,
    "line": 1,
  },
  "type": "BinaryExpression",
}
`;

exports[`3Operands When_'y/10 * 9'_Should_ParseSuccessfully 1`] = `
Object {
  "end": Object {
    "column": 15,
    "line": 1,
  },
  "left": Object {
    "end": Object {
      "column": 10,
      "line": 1,
    },
    "left": Object {
      "datatype": "unknown",
      "end": Object {
        "column": 8,
        "line": 1,
      },
      "name": "y",
      "start": Object {
        "column": 8,
        "line": 1,
      },
      "type": "Identifier",
      "typeList": Array [
        "unknown",
      ],
    },
    "operator": "/",
    "right": Object {
      "end": Object {
        "column": 10,
        "line": 1,
      },
      "raw": "10",
      "start": Object {
        "column": 10,
        "line": 1,
      },
      "type": "Literal",
      "value": 10,
    },
    "start": Object {
      "column": 8,
      "line": 1,
    },
    "type": "BinaryExpression",
  },
  "operator": "*",
  "right": Object {
    "end": Object {
      "column": 15,
      "line": 1,
    },
    "raw": "9",
    "start": Object {
      "column": 15,
      "line": 1,
    },
    "type": "Literal",
    "value": 9,
  },
  "start": Object {
    "column": 8,
    "line": 1,
  },
  "type": "BinaryExpression",
}
`;

exports[`Addition When_'1+2'_Should_ParseSuccessfully 1`] = `
Object {
  "end": Object {
    "column": 10,
    "line": 1,
  },
  "left": Object {
    "end": Object {
      "column": 8,
      "line": 1,
    },
    "raw": "1",
    "start": Object {
      "column": 8,
      "line": 1,
    },
    "type": "Literal",
    "value": 1,
  },
  "operator": "+",
  "right": Object {
    "end": Object {
      "column": 10,
      "line": 1,
    },
    "raw": "2",
    "start": Object {
      "column": 10,
      "line": 1,
    },
    "type": "Literal",
    "value": 2,
  },
  "start": Object {
    "column": 8,
    "line": 1,
  },
  "type": "BinaryExpression",
}
`;

exports[`Addition When_'abc+def'_Should_ParseSuccessfully 1`] = `
Object {
  "end": Object {
    "column": 12,
    "line": 1,
  },
  "left": Object {
    "datatype": "unknown",
    "end": Object {
      "column": 8,
      "line": 1,
    },
    "name": "abc",
    "start": Object {
      "column": 8,
      "line": 1,
    },
    "type": "Identifier",
    "typeList": Array [
      "unknown",
    ],
  },
  "operator": "+",
  "right": Object {
    "datatype": "unknown",
    "end": Object {
      "column": 12,
      "line": 1,
    },
    "name": "def",
    "start": Object {
      "column": 12,
      "line": 1,
    },
    "type": "Identifier",
    "typeList": Array [
      "unknown",
    ],
  },
  "start": Object {
    "column": 8,
    "line": 1,
  },
  "type": "BinaryExpression",
}
`;

exports[`Addition When_'x+5'_Should_ParseSuccessfully 1`] = `
Object {
  "end": Object {
    "column": 10,
    "line": 1,
  },
  "left": Object {
    "datatype": "unknown",
    "end": Object {
      "column": 8,
      "line": 1,
    },
    "name": "x",
    "start": Object {
      "column": 8,
      "line": 1,
    },
    "type": "Identifier",
    "typeList": Array [
      "unknown",
    ],
  },
  "operator": "+",
  "right": Object {
    "end": Object {
      "column": 10,
      "line": 1,
    },
    "raw": "5",
    "start": Object {
      "column": 10,
      "line": 1,
    },
    "type": "Literal",
    "value": 5,
  },
  "start": Object {
    "column": 8,
    "line": 1,
  },
  "type": "BinaryExpression",
}
`;

exports[`Division When_'-1/a'_Should_ParseSuccessfully 1`] = `
Object {
  "end": Object {
    "column": 11,
    "line": 1,
  },
  "left": Object {
    "argument": Object {
      "end": Object {
        "column": 9,
        "line": 1,
      },
      "raw": "1",
      "start": Object {
        "column": 9,
        "line": 1,
      },
      "type": "Literal",
      "value": 1,
    },
    "end": Object {
      "column": 9,
      "line": 1,
    },
    "operator": "-",
    "prefix": true,
    "start": Object {
      "column": 8,
      "line": 1,
    },
    "type": "UnaryExpression",
  },
  "operator": "/",
  "right": Object {
    "datatype": "unknown",
    "end": Object {
      "column": 11,
      "line": 1,
    },
    "name": "a",
    "start": Object {
      "column": 11,
      "line": 1,
    },
    "type": "Identifier",
    "typeList": Array [
      "unknown",
    ],
  },
  "start": Object {
    "column": 8,
    "line": 1,
  },
  "type": "BinaryExpression",
}
`;

exports[`Division When_'1/2'_Should_ParseSuccessfully 1`] = `
Object {
  "end": Object {
    "column": 10,
    "line": 1,
  },
  "left": Object {
    "end": Object {
      "column": 8,
      "line": 1,
    },
    "raw": "1",
    "start": Object {
      "column": 8,
      "line": 1,
    },
    "type": "Literal",
    "value": 1,
  },
  "operator": "/",
  "right": Object {
    "end": Object {
      "column": 10,
      "line": 1,
    },
    "raw": "2",
    "start": Object {
      "column": 10,
      "line": 1,
    },
    "type": "Literal",
    "value": 2,
  },
  "start": Object {
    "column": 8,
    "line": 1,
  },
  "type": "BinaryExpression",
}
`;

exports[`Division When_'abc/def'_Should_ParseSuccessfully 1`] = `
Object {
  "end": Object {
    "column": 12,
    "line": 1,
  },
  "left": Object {
    "datatype": "unknown",
    "end": Object {
      "column": 8,
      "line": 1,
    },
    "name": "abc",
    "start": Object {
      "column": 8,
      "line": 1,
    },
    "type": "Identifier",
    "typeList": Array [
      "unknown",
    ],
  },
  "operator": "/",
  "right": Object {
    "datatype": "unknown",
    "end": Object {
      "column": 12,
      "line": 1,
    },
    "name": "def",
    "start": Object {
      "column": 12,
      "line": 1,
    },
    "type": "Identifier",
    "typeList": Array [
      "unknown",
    ],
  },
  "start": Object {
    "column": 8,
    "line": 1,
  },
  "type": "BinaryExpression",
}
`;

exports[`Division When_'x/5'_Should_ParseSuccessfully 1`] = `
Object {
  "end": Object {
    "column": 10,
    "line": 1,
  },
  "left": Object {
    "datatype": "unknown",
    "end": Object {
      "column": 8,
      "line": 1,
    },
    "name": "x",
    "start": Object {
      "column": 8,
      "line": 1,
    },
    "type": "Identifier",
    "typeList": Array [
      "unknown",
    ],
  },
  "operator": "/",
  "right": Object {
    "end": Object {
      "column": 10,
      "line": 1,
    },
    "raw": "5",
    "start": Object {
      "column": 10,
      "line": 1,
    },
    "type": "Literal",
    "value": 5,
  },
  "start": Object {
    "column": 8,
    "line": 1,
  },
  "type": "BinaryExpression",
}
`;

exports[`Division When_'y/10'_Should_ParseSuccessfully 1`] = `
Object {
  "end": Object {
    "column": 10,
    "line": 1,
  },
  "left": Object {
    "datatype": "unknown",
    "end": Object {
      "column": 8,
      "line": 1,
    },
    "name": "y",
    "start": Object {
      "column": 8,
      "line": 1,
    },
    "type": "Identifier",
    "typeList": Array [
      "unknown",
    ],
  },
  "operator": "/",
  "right": Object {
    "end": Object {
      "column": 10,
      "line": 1,
    },
    "raw": "10",
    "start": Object {
      "column": 10,
      "line": 1,
    },
    "type": "Literal",
    "value": 10,
  },
  "start": Object {
    "column": 8,
    "line": 1,
  },
  "type": "BinaryExpression",
}
`;

exports[`Multiplication When_'-1*a'_Should_ParseSuccessfully 1`] = `
Object {
  "end": Object {
    "column": 11,
    "line": 1,
  },
  "left": Object {
    "argument": Object {
      "end": Object {
        "column": 9,
        "line": 1,
      },
      "raw": "1",
      "start": Object {
        "column": 9,
        "line": 1,
      },
      "type": "Literal",
      "value": 1,
    },
    "end": Object {
      "column": 9,
      "line": 1,
    },
    "operator": "-",
    "prefix": true,
    "start": Object {
      "column": 8,
      "line": 1,
    },
    "type": "UnaryExpression",
  },
  "operator": "*",
  "right": Object {
    "datatype": "unknown",
    "end": Object {
      "column": 11,
      "line": 1,
    },
    "name": "a",
    "start": Object {
      "column": 11,
      "line": 1,
    },
    "type": "Identifier",
    "typeList": Array [
      "unknown",
    ],
  },
  "start": Object {
    "column": 8,
    "line": 1,
  },
  "type": "BinaryExpression",
}
`;

exports[`Multiplication When_'1*2'_Should_ParseSuccessfully 1`] = `
Object {
  "end": Object {
    "column": 10,
    "line": 1,
  },
  "left": Object {
    "end": Object {
      "column": 8,
      "line": 1,
    },
    "raw": "1",
    "start": Object {
      "column": 8,
      "line": 1,
    },
    "type": "Literal",
    "value": 1,
  },
  "operator": "*",
  "right": Object {
    "end": Object {
      "column": 10,
      "line": 1,
    },
    "raw": "2",
    "start": Object {
      "column": 10,
      "line": 1,
    },
    "type": "Literal",
    "value": 2,
  },
  "start": Object {
    "column": 8,
    "line": 1,
  },
  "type": "BinaryExpression",
}
`;

exports[`Multiplication When_'abc*def'_Should_ParseSuccessfully 1`] = `
Object {
  "end": Object {
    "column": 12,
    "line": 1,
  },
  "left": Object {
    "datatype": "unknown",
    "end": Object {
      "column": 8,
      "line": 1,
    },
    "name": "abc",
    "start": Object {
      "column": 8,
      "line": 1,
    },
    "type": "Identifier",
    "typeList": Array [
      "unknown",
    ],
  },
  "operator": "*",
  "right": Object {
    "datatype": "unknown",
    "end": Object {
      "column": 12,
      "line": 1,
    },
    "name": "def",
    "start": Object {
      "column": 12,
      "line": 1,
    },
    "type": "Identifier",
    "typeList": Array [
      "unknown",
    ],
  },
  "start": Object {
    "column": 8,
    "line": 1,
  },
  "type": "BinaryExpression",
}
`;

exports[`Multiplication When_'x*5'_Should_ParseSuccessfully 1`] = `
Object {
  "end": Object {
    "column": 10,
    "line": 1,
  },
  "left": Object {
    "datatype": "unknown",
    "end": Object {
      "column": 8,
      "line": 1,
    },
    "name": "x",
    "start": Object {
      "column": 8,
      "line": 1,
    },
    "type": "Identifier",
    "typeList": Array [
      "unknown",
    ],
  },
  "operator": "*",
  "right": Object {
    "end": Object {
      "column": 10,
      "line": 1,
    },
    "raw": "5",
    "start": Object {
      "column": 10,
      "line": 1,
    },
    "type": "Literal",
    "value": 5,
  },
  "start": Object {
    "column": 8,
    "line": 1,
  },
  "type": "BinaryExpression",
}
`;

exports[`Multiplication When_'y*10'_Should_ParseSuccessfully 1`] = `
Object {
  "end": Object {
    "column": 10,
    "line": 1,
  },
  "left": Object {
    "datatype": "unknown",
    "end": Object {
      "column": 8,
      "line": 1,
    },
    "name": "y",
    "start": Object {
      "column": 8,
      "line": 1,
    },
    "type": "Identifier",
    "typeList": Array [
      "unknown",
    ],
  },
  "operator": "*",
  "right": Object {
    "end": Object {
      "column": 10,
      "line": 1,
    },
    "raw": "10",
    "start": Object {
      "column": 10,
      "line": 1,
    },
    "type": "Literal",
    "value": 10,
  },
  "start": Object {
    "column": 8,
    "line": 1,
  },
  "type": "BinaryExpression",
}
`;

exports[`Subtraction When_'-x-5'_Should_ParseSuccessfully 1`] = `
Object {
  "end": Object {
    "column": 11,
    "line": 1,
  },
  "left": Object {
    "argument": Object {
      "datatype": "unknown",
      "end": Object {
        "column": 9,
        "line": 1,
      },
      "name": "x",
      "start": Object {
        "column": 9,
        "line": 1,
      },
      "type": "Identifier",
      "typeList": Array [
        "unknown",
      ],
    },
    "end": Object {
      "column": 9,
      "line": 1,
    },
    "operator": "-",
    "prefix": true,
    "start": Object {
      "column": 8,
      "line": 1,
    },
    "type": "UnaryExpression",
  },
  "operator": "-",
  "right": Object {
    "end": Object {
      "column": 11,
      "line": 1,
    },
    "raw": "5",
    "start": Object {
      "column": 11,
      "line": 1,
    },
    "type": "Literal",
    "value": 5,
  },
  "start": Object {
    "column": 8,
    "line": 1,
  },
  "type": "BinaryExpression",
}
`;

exports[`Subtraction When_'1-2'_Should_ParseSuccessfully 1`] = `
Object {
  "end": Object {
    "column": 10,
    "line": 1,
  },
  "left": Object {
    "end": Object {
      "column": 8,
      "line": 1,
    },
    "raw": "1",
    "start": Object {
      "column": 8,
      "line": 1,
    },
    "type": "Literal",
    "value": 1,
  },
  "operator": "-",
  "right": Object {
    "end": Object {
      "column": 10,
      "line": 1,
    },
    "raw": "2",
    "start": Object {
      "column": 10,
      "line": 1,
    },
    "type": "Literal",
    "value": 2,
  },
  "start": Object {
    "column": 8,
    "line": 1,
  },
  "type": "BinaryExpression",
}
`;

exports[`Subtraction When_'abc-def'_Should_ParseSuccessfully 1`] = `
Object {
  "end": Object {
    "column": 12,
    "line": 1,
  },
  "left": Object {
    "datatype": "unknown",
    "end": Object {
      "column": 8,
      "line": 1,
    },
    "name": "abc",
    "start": Object {
      "column": 8,
      "line": 1,
    },
    "type": "Identifier",
    "typeList": Array [
      "unknown",
    ],
  },
  "operator": "-",
  "right": Object {
    "datatype": "unknown",
    "end": Object {
      "column": 12,
      "line": 1,
    },
    "name": "def",
    "start": Object {
      "column": 12,
      "line": 1,
    },
    "type": "Identifier",
    "typeList": Array [
      "unknown",
    ],
  },
  "start": Object {
    "column": 8,
    "line": 1,
  },
  "type": "BinaryExpression",
}
`;

exports[`Subtraction When_'x-5'_Should_ParseSuccessfully 1`] = `
Object {
  "end": Object {
    "column": 10,
    "line": 1,
  },
  "left": Object {
    "datatype": "unknown",
    "end": Object {
      "column": 8,
      "line": 1,
    },
    "name": "x",
    "start": Object {
      "column": 8,
      "line": 1,
    },
    "type": "Identifier",
    "typeList": Array [
      "unknown",
    ],
  },
  "operator": "-",
  "right": Object {
    "end": Object {
      "column": 10,
      "line": 1,
    },
    "raw": "5",
    "start": Object {
      "column": 10,
      "line": 1,
    },
    "type": "Literal",
    "value": 5,
  },
  "start": Object {
    "column": 8,
    "line": 1,
  },
  "type": "BinaryExpression",
}
`;
